[package]
name = "money-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
http = "0.2.4"
iso_currency = "0.1.0"
postgres-types = "0.2.0"
rust_decimal = { version = "1.26.1", features = ["serde-float", "serde-with-str"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.30"
rstest = "0.17.0"